fix gap#2

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ body {
   font-size: 2rem;
   position: relative;
   overflow: hidden;
-  margin-bottom: 25px;
+  margin-bottom: 0.625rem;
 }
 
 .portfolio-thumbnail img {
